Fixed z-index on carousel slides

--- a/src/css/Services.css
+++ b/src/css/Services.css
@@ -3,6 +3,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
+    z-index: -10;
 }
 
 .slick-prev:before, .slick-next:before {
